test/error/AbsentDecl.mod
MODULE AbsentDecl;

  CONST

  TYPE

  VAR a, b: INTEGER;

BEGIN
    a := c
END AbsentDecl.
